src/objects/CM_Project__c.object
<CustomObject>
    <description>Cloud Mentor Project Object to track detailed information about a Project</description>
    <fields>
        <fullName>DeadLine__c</fullName>
        <label>DeadLine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>DeadLine__c - Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Balance_Hours__c</fullName>
        <formula>Total_Hours_Budget__c -  Task_Estimated_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Balance Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Completion__c</fullName>
        <formula>(Task_Estimated_Hours__c /  Total_Hours_Budget__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Completion %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Expense_Balance__c</fullName>
        <formula>Total_Expense_Budget__c -  Task_Estimated_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Expenses_Incurred__c</fullName>
        <formula>(Task_Estimated_Expense__c /  Total_Expense_Budget__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Expenses Incurred %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Estimated_Expense__c</fullName>
        <label>Total Task Estimated Expense</label>
        <summarizedField>CM_Task__c.Estimated_Expense__c</summarizedField>
        <summaryForeignKey>CM_Task__c.ProjectName__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Task_Estimated_Hours__c</fullName>
        <label>Total Task Estimated Hours</label>
        <summarizedField>CM_Task__c.Estimated_Hours__c</summarizedField>
        <summaryForeignKey>CM_Task__c.ProjectName__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Task_Incurred_Expense__c</fullName>
        <label>Total Task Incurred Expense</label>
        <summarizedField>CM_Task__c.Total_Expense__c</summarizedField>
        <summaryForeignKey>CM_Task__c.ProjectName__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Task_Incurred_Hours__c</fullName>
        <label>Total Task Incurred Hours</label>
        <summarizedField>CM_Task__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>CM_Task__c.ProjectName__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget__c</fullName>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget__c</fullName>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Kickoff__c</columns>
        <columns>Duration__c</columns>
        <columns>DeadLine__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Hours_Budget__c</columns>
        <columns>Total_Expense_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>